# openai_nicegui_chat

./: README.md  frontend.py  main.py  pyproject.toml  start.sh
.github/workflows/: main.yaml
terraform/: backend-dev.tfvars  backend-prod.tfvars  instance.tf  variable.tf
