[project]
name = "openai-nicegui-chat"
version = "0.4.0"
description = "OpenAI Chat with a NiceGUI UI "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.9",
    "nicegui>=2.13.0",
    "uvicorn>=0.34.0",
]
